--- a/platform/nw/app/styles/main.css
+++ b/platform/nw/app/styles/main.css
@@ -40,6 +40,14 @@ body {
     padding: 8px 15px 0px;
 }
 
+#platform-node-name, #platform-group-name {
+    width: 120px;
+}
+
+#platform-group-port {
+    width: 75px;
+}
+
 #content {
     position: absolute;
     top: 15px;
@@ -129,35 +137,8 @@ body {
     border-bottom: none;
 }
 
-/* Custom page footer */
-.footer {
-    padding-top: 19px;
-    color: #777;
-    border-top: 1px solid #e5e5e5;
-}
-
-.container-narrow > hr {
-    margin: 30px 0;
-}
-
-/* Main marketing message and sign up button */
-.jumbotron {
-    text-align: center;
-    border-bottom: 1px solid #e5e5e5;
-}
-
-.jumbotron .btn {
-    font-size: 21px;
-    padding: 14px 24px;
-}
-
-/* Supporting marketing content */
-.marketing {
-    margin: 40px 0;
-}
-
-.marketing p + h4 {
-    margin-top: 28px;
+.modal-dialog {
+    padding-top: 15%;
 }
 
 /* Responsive: Portrait tablets and up */
@@ -178,9 +159,10 @@ body {
     .header {
         margin-bottom: 30px;
     }
-    
-    /* Remove the bottom border on the jumbotron for visual effect */
-    .jumbotron {
-        border-bottom: 0;
+}
+
+@media screen and (max-width: 767px) {
+    #platform-node-name, #platform-group-name, #platform-group-port {
+        width: 100%;
     }
 }
