--- a/platform/nw/templates/modal-start-from-custom-values.html
+++ b/platform/nw/templates/modal-start-from-custom-values.html
@@ -23,7 +23,7 @@
         </div>
         <div class="modal-footer">
             <button id="back" type="button" class="btn btn-default">Back</button>
-            <button id="ready" type="button" class="btn btn-primary">Ready</button>
+            <button id="start-runtime" type="button" class="btn btn-primary">Start</button>
         </div>
     </div><!-- /.modal-content -->
 </div><!-- /.modal-dialog -->
