--- a/platform/nw/templates/modal-start-from-custom-values.html
+++ b/platform/nw/templates/modal-start-from-custom-values.html
@@ -20,10 +20,27 @@
                 <label for="group-port">Group port</label>
                 <input type="number" class="form-control" id="group-port" placeholder="Group port" value="9000">
             </div>
+
+            <!--<div id="loading-libraries">-->
+                <!--<p>Retrieving node & group types from <strong>Kevoree</strong> standard libraries</p>-->
+                <!--<div class="progress progress-striped active">-->
+                    <!--<div class="progress-bar"  role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%"></div>-->
+                <!--</div>-->
+            <!--</div>-->
+            <!--<div id="loaded-libraries" class="hide">-->
+                <!--<div class="form-group">-->
+                    <!--<label for="node-type">Node type</label>-->
+                    <!--<select class="form-control" id="node-type"></select>-->
+                <!--</div>-->
+                <!--<div class="form-group">-->
+                    <!--<label for="group-type">Group type</label>-->
+                    <!--<select class="form-control" id="group-type"></select>-->
+                <!--</div>-->
+            <!--</div>-->
         </div>
         <div class="modal-footer">
             <button id="back" type="button" class="btn btn-default">Back</button>
-            <button id="start-runtime" type="button" class="btn btn-primary">Start</button>
+            <button id="start-runtime" type="button" class="btn btn-primary" disabled>Start</button>
         </div>
     </div><!-- /.modal-content -->
 </div><!-- /.modal-dialog -->
