--- a/platform/nw/templates/modal-start-from-file.html
+++ b/platform/nw/templates/modal-start-from-file.html
@@ -15,7 +15,7 @@
             <div id="model-loading" class="hide">
                 <p>Parsing model in order to find node instances...</p>
                 <div class="progress progress-striped active">
-                    <div class="progress-bar"  role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 100%"></div>
+                    <div class="progress-bar"  role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%"></div>
                 </div>
             </div>
             <div id="model-loaded" class="hide">
@@ -27,7 +27,7 @@
         </div>
         <div class="modal-footer">
             <button id="back" type="button" class="btn btn-default">Back</button>
-            <button id="start-runtime" type="button" class="btn btn-primary">Start</button>
+            <button id="start-runtime" type="button" class="btn btn-primary" disabled>Start</button>
         </div>
     </div><!-- /.modal-content -->
 </div><!-- /.modal-dialog -->
