--- a/runtimes/browser/styles/main.css
+++ b/runtimes/browser/styles/main.css
@@ -2,13 +2,13 @@ html, body, #app, .app-container {
   height: 100%;
 }
 
-button.small {
+button.small, input.small {
   height: 24px;
   line-height: 24px;
   padding: 0 10px;
 }
 
-button.medium {
+button.medium, input.medium {
   height: 30px;
   line-height: 30px;
   padding: 0 12px;
@@ -16,4 +16,15 @@ button.medium {
 
 .hide {
   display: none;
+}
+
+.route-container .container {
+  margin-top: 15px;
+}
+
+.uppercase {
+  text-transform: uppercase;
+  font-size: 1.4rem;
+  letter-spacing: .2rem;
+  font-weight: 600;
 }
