--- a/runtimes/browser/styles/main.css
+++ b/runtimes/browser/styles/main.css
@@ -14,10 +14,6 @@ button.medium, input.medium {
   padding: 0 12px;
 }
 
-.hide {
-  display: none;
-}
-
 .route-container .container {
   margin-top: 15px;
 }
@@ -27,4 +23,10 @@ button.medium, input.medium {
   font-size: 1.4rem;
   letter-spacing: .2rem;
   font-weight: 600;
+}
+
+.react-grid-item.react-grid-placeholder {
+  background-color: #666;
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
 }
