--- a/runtimes/browser/styles/main.css
+++ b/runtimes/browser/styles/main.css
@@ -30,3 +30,13 @@ button.medium, input.medium {
   border-top-left-radius: 4px;
   border-top-right-radius: 4px;
 }
+
+.overlay {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  display: none;
+  z-index: 999999;
+}
