--- a/runtimes/browser/styles/main.css
+++ b/runtimes/browser/styles/main.css
@@ -14,6 +14,18 @@ button.medium, input.medium {
   padding: 0 12px;
 }
 
+input.small {
+  padding: 0 0 0 10px;
+}
+
+input.medium {
+  padding: 0 0 0 12px;
+}
+
+button:active {
+  background-color: #eee;
+}
+
 .route-container .container {
   margin-top: 15px;
 }
