add Twitter to std lib + change the way browser bundles are handle (making them optional if needed)

--- a/tools/kevoree-cli/_templates/group.hbs
+++ b/tools/kevoree-cli/_templates/group.hbs
@@ -5,12 +5,12 @@ const {{name}} = AbstractGroup.extend({
   tdef_version: 1,
 
   start(done) {
-    this.log.info('{{name}}', 'Hello world!');
+    this.log.info('Hello world!');
     done();
   },
 
   stop(done) {
-    this.log.info('{{name}}', 'Bye world!');
+    this.log.info('Bye world!');
     done();
   }
 });
