--- a/tools/kevoree-cli/_templates/node.hbs
+++ b/tools/kevoree-cli/_templates/node.hbs
@@ -5,12 +5,12 @@ const {{name}} = AbstractNode.extend({
   tdef_version: 1,
 
   start(done) {
-    this.log.info('{{name}}', 'Hello world!');
+    this.log.info('Hello world!');
     done();
   },
 
   stop(done) {
-    this.log.info('{{name}}', 'Bye world!');
+    this.log.info('Bye world!');
     done();
   },
 
