update CLI command 'create' in order to bootstrap the UI with a tiny React component

--- a/tools/kevoree-cli/_templates/browser.hbs
+++ b/tools/kevoree-cli/_templates/browser.hbs
@@ -1,6 +1,6 @@
 const KevoreeModuleLoader = require('kevoree-module-loader');
 
 const pkg = require('../package.json');
-const Type = require('./{{name}}');
+const {{name}} = require('./{{name}}');
 
-KevoreeModuleLoader.register(pkg.name, pkg.version, Type);
+KevoreeModuleLoader.register(pkg.name, pkg.version, {{name}});
