--- a/tools/kevoree-cli/_templates/package-browser.hbs
+++ b/tools/kevoree-cli/_templates/package-browser.hbs
@@ -12,6 +12,7 @@
     "prestart": "npm run build",
     "start": "kevoree-scripts start",
     "pretest": "npm run build",
+    "browser": "kevoree-scripts browser",
     "test": "mocha test",
     "prekev:publish": "npm run build",
     "kev:publish": "kevoree-scripts publish",
